[tool.poetry]
name = "obsidian"
version = "0.1.0"
description = ""
authors = ["iwbc-mzk <46069337+iwbc-mzk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.4.2"
mkdocs-roamlinks-plugin = "^0.3.2"
pyyaml = "^6.0.1"
mkdocs-callouts = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
